login and registration with rights credentials

--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
   },
   "homepage": "https://github.com/NikhilSurani/myapp#readme",
   "dependencies": {
-    "express": "^4.16.3",
     "bcryptjs": "*",
     "body-parser": "*",
     "connect-flash": "*",
     "cookie-parser": "^1.4.1",
+    "express": "^4.16.3",
     "express-handlebars": "*",
     "express-messages": "*",
     "express-session": "*",
     "express-validator": "*",
-    "mongodb": "*",
-    "mongoose": "*",
+    "mongodb": "^3.0.6",
+    "mongoose": "^5.0.14",
     "passport": "*",
     "passport-http": "*",
     "passport-local": "*"
